    becomes the DOSBox-X default directory. (Wengier)
  - You can now change the current output dynamically
    with CONFIG command, e.g. "CONFIG -set output=ttf"
    and "CONFIG -set output=default". (Wengier)
  - The command "KEYB US" will return the DOS codepage
    to 437 if current codepage is different. (Wengier)
  - The setting "output=default" will enable the OpenGL
    output for the Linux platform if possible. (Wengier)
  - Fixed the CGA/MCGA/MDA/Hercules-specfic shortcut
    function buttons in Mapper Editor, and the screen
    colors after exiting from Mapper Editor when using
    these machine types in Direct3D output. (Wengier)
  - Fixed DOS Int21/AH=0x5a "Create temporary file"
    function not generating unique files. (Wengier)
  - Fixed that the current drive goes back to Z drive
    when combined unmounts & mounts are used. (Wengier)
  - Fixed crash of Free Pascal compiler with dynamic
    core and setting "use dynamic core with paging on =
    auto" introduced in the previous version. (Wengier)
  - Fixed launching Windows programs when the working
    directory has no 8.3 filename entry. (Wengier)
  - Fixed an issue in MinGW builds that no data will be
    sent to the OPL3Duo board. (DhrBaksteen)
  - Fixed screen flickering when hovering over the menu
    with Direct3D output in the Windows SDL2 build that
    was introduced in the last version. (Wengier)
  - Fixed mounting disk/CD images with long paths from
    the "Drive" menu may not work properly. (Wengier)
  - Fixed that the "Save" button in Configuration Tool
    did not save config file in last version. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4336: Correct an oversight of r4186 when floppy
    disks are mounted.
    - r4330: some big endian improvements and drive_fat
    fixes. (jmarsh)
    - r4320: Report Q-Channel track number in BCD,
    meaning it is not converted to binary by the
    CD-ROM device driver. Fixes the CD-Player feature