@@ -95,11 +95,14 @@
   - The command "KEYB US" will return the DOS codepage
     to 437 if current codepage is different. (Wengier)
   - The setting "output=default" will enable the OpenGL
-    output for the Linux platform if possible. (Wengier)
+    output for Linux systems if possible. (Wengier)
   - Fixed the CGA/MCGA/MDA/Hercules-specfic shortcut
     function buttons in Mapper Editor, and the screen
     colors after exiting from Mapper Editor when using
-    these machine types in Direct3D output. (Wengier)
+    these machine types in Direct3D output (SDL1 build).
+    Also fixed the messages in the welcome banner for
+    these machine types to inform users the new default
+    shortcuts (Ctrl(+Shift)+[F7/F8]). (Wengier)
   - Fixed DOS Int21/AH=0x5a "Create temporary file"
     function not generating unique files. (Wengier)
   - Fixed that the current drive goes back to Z drive
